--- a/css/style.css
+++ b/css/style.css
@@ -601,3 +601,54 @@ label #bars
 		font-size: 13px;
 	}
 }
+
+.home-profile-info
+{
+	font-family: title;
+	font-size: 20px;
+}
+
+@media(max-width: 1200px)
+{
+	.home-profile-info
+	{
+		font-size: 18px;
+	}
+}
+
+@media(max-width: 1068px)
+{
+	.home-profile-info
+	{
+		font-size: 15px;
+	}
+}
+
+.home-goal
+{
+	font-size: 19px;
+}
+
+@media(max-width: 1068px)
+{
+	.home-goal
+	{
+		font-size: 18px;
+	}
+}
+
+@media(max-width: 773px)
+{
+	.home-goal
+	{
+		font-size: 16px;
+	}
+}
+
+@media(max-width: 481px)
+{
+	.home-goal
+	{
+		font-size: 14px;
+	}
+}
