about and footer

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ nav
 	width: 100%;
 	z-index: 1000;
 	position: fixed;
+	top: 0;
 }
 
 nav img
@@ -668,12 +669,13 @@ label #bars
 
 #full-footer
 {
-	background: #afafaf;
+	background: #2e373e;
 }
 
 .main-footer
 {
-	background: #dbdbdb;
+	background: #1e272e;
+	color: #eeeeee;
 }
 
 .footer-head
@@ -684,11 +686,17 @@ label #bars
 .footer-data
 {
 	font-size: 16px;
+	color: rgba(255,255,255,0.6);
+}
+
+.footer-social
+{
+	opacity: 0.9;
 }
 
 .credit-box
 {
-	background: #dbdbdb;
+	background: #1e272e;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
@@ -696,13 +704,14 @@ label #bars
 .credit
 {
 	font-size: 10px;
-	opacity: 0.3;
+	opacity: 0.11;
 	transition: 0.4s;
+	color: #fff;
 }
 
 .credit:hover
 {
-	opacity: 1;
+	opacity: 0.4;
 }
 
 @media(max-width: 991px)
@@ -713,15 +722,8 @@ label #bars
 	}
 }
 
-@media(max-width: 530px)
-{
-	.credit
-	{
-		opacity: 0.25;
-	}
-}
-
 .copyright
 {
-	background: #afafaf;
+	background: #2e373e;
+	color: rgba(255,255,255,0.4);
 }
