--- a/css/style.css
+++ b/css/style.css
@@ -691,7 +691,7 @@ label #bars
 
 .footer-social
 {
-	opacity: 0.9;
+	opacity: 0.95;
 }
 
 .credit-box
@@ -726,4 +726,103 @@ label #bars
 {
 	background: #2e373e;
 	color: rgba(255,255,255,0.4);
+}
+
+.contact-set
+{
+	padding-bottom: 20px !important;
+}
+
+.ev_form
+{
+    border: 1px solid #e09b9b;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    padding: 2%;
+}
+
+.form-required-show
+{
+    text-align: right;
+    font-size: 13px;
+}
+
+.form-required
+{
+    color: red;
+}
+
+.ev_btn
+{
+    width: 25%;
+}
+
+.txt-area
+{
+	resize: none;
+	height: 100px !important;
+}
+
+.contact-about
+{
+	padding: 2%;
+	margin: 10px 0 15px;
+}
+
+.contact-fa
+{
+	padding-right: 2px;
+}
+
+.contact-head
+{
+	font-family: sans-serif;
+	font-size: 20px;
+	padding: 5px 0;
+	color: #000;
+}
+
+.contact-call
+{
+	font-family: sans-serif;
+	color: rgba(21,69,115,0.8);
+	font-size: 16px;
+}
+
+.contact-call:hover
+{
+	text-decoration: none;
+}
+
+.whatsapp-button
+{
+	margin-top: 5px;
+	font-size: 16px;
+}
+
+.contact-info
+{
+	font-family: sans-serif;
+	color: rgba(21,69,115,0.8);
+	padding: 5px 0 10px;
+	font-size: 16px;
+}
+
+.contact-social-btn
+{
+	margin-top: 5px;
+}
+
+.contact-set
+{
+	padding-bottom: 20px !important;
+}
+
+.contact-info-special
+{
+	font-family: sans-serif;
+	color: rgba(0,0,0,0.75);
+	padding: 5px 0;
+	font-size: 16px;
 }
