--- a/css/style.css
+++ b/css/style.css
@@ -25,15 +25,25 @@ body
 
 .banner
 {
+	padding-top: 60px;
+	background: url(../images/sky.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	transition: 2s;
+}
+
+#banner
+{
 	padding-top: 90px;
 	background: url(../images/sky.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
+	transition: 2s;
 }
 
 nav
 {
-	height: 50px;
+	height: 60px;
 	width: 100%;
 	z-index: 1000;
 	position: fixed;
@@ -44,10 +54,11 @@ nav
 
 nav img
 {
-	height: 40px;
+	height: 50px;
 	position: absolute;
 	top: 5px;
 	left: 12%;
+	transition: 0.4s;
 }
 
 nav ul
@@ -61,8 +72,9 @@ nav ul
 nav ul li
 {
 	display: inline-block;
-	line-height: 50px;
+	line-height: 70px;
 	margin: 0 15px;
+	transition: 0.4s;
 }
 
 nav ul li a
@@ -114,11 +126,11 @@ label
 label #bars
 {
 	color: #fff;
-	font-size: 20px;
+	font-size: 24px;
 	float: right;
 	margin-right: 40px;
 	cursor: pointer;
-	margin-top: 15px;
+	margin-top: 18px;
 	display: none;
 	transition: .2s linear;
 }
@@ -154,13 +166,18 @@ label #bars
 		line-height: 30;
 	}
 
+	nav
+	{
+		height: 60px;
+	}
+
 	nav ul
 	{
 		position: fixed;
 		width: 40%;
 		height: 100vh;
 		background: #eae5e5;
-		top: 50px;
+		top: 60px;
 		right: -100%;
 		text-align: center;
 		transition: all .5s;
@@ -173,6 +190,7 @@ label #bars
 	{
 		display: block;
 		transition: 5s;
+		line-height: 60px;
 	}
 
 	nav ul li a
@@ -205,6 +223,8 @@ label #bars
 	nav img
 	{
 		left: 8%;
+		top: 5px;
+		height: 50px;
 	}
 	
 	nav ul li a
@@ -243,28 +263,115 @@ label #bars
 
 .banner-title
 {
-	font-size: 43px;
-	line-height: 55px;
-	margin-bottom: 10px;
+	font-size: 60px;
+	line-height: 70px;
+	margin-bottom: 3%;
 	font-weight: 600;
 	font-family: 'Roboto Condensed', sans-serif;
 }
 
-@media(max-width: 767px)
+.banner-caption
+{
+	font-size: 27px;
+	font-family: 'Roboto Condensed', sans-serif;
+	line-height: 50px;
+	color: rgba(255,255,255,0.85);
+	margin-bottom: 2%;
+}
+
+@media(max-width: 417px)
 {
 	.banner-title
 	{
-		font-size: 38px;
+		font-size: 50px;
 		line-height: 50px;
-		margin-bottom: 0;
+		margin-bottom: 40px;
+	}
+
+	.banner-caption
+	{
+		font-size: 25px;
+		line-height: 46px;
 	}
 }
 
-.banner-caption
+@media(max-height: 740px) and (max-width: 450px)
 {
-	font-size: 20px;
-	font-family: 'Roboto Condensed', sans-serif;
-	line-height: 40px;
+	.banner-title
+	{
+		font-size: 45px;
+		line-height: 50px;
+		margin-bottom: 30px;
+	}
+
+	.banner-caption
+	{
+		font-size: 20px;
+		line-height: 40px;
+	}
+}
+
+@media(max-height: 670px) and (max-width: 450px)
+{
+	#banner
+	{
+		padding-top: 60px;
+	}
+
+	.banner-title
+	{
+		font-size: 43px;
+		line-height: 50px;
+		margin-bottom: 30px;
+	}
+
+	.banner-caption
+	{
+		font-size: 20px;
+		line-height: 35px;
+	}
+}
+
+@media(max-height: 640px) and (max-width: 450px)
+{
+	#banner
+	{
+		padding-top: 60px;
+	}
+
+	.banner-title
+	{
+		font-size: 43px;
+		line-height: 50px;
+		margin-bottom: 30px;
+	}
+
+	.banner-caption
+	{
+		font-size: 20px;
+		line-height: 31px;
+	}
+}
+
+@media(max-height: 600px) and (max-width: 450px)
+{
+	#banner
+	{
+		padding-top: 50px;
+	}
+
+	.banner-title
+	{
+		font-size: 30px;
+		line-height: 40px;
+		margin-bottom: 30px;
+	}
+
+	.banner-caption
+	{
+		font-size: 17px;
+		line-height: 32px;
+	}
 }
 
 #notnav
@@ -282,13 +389,6 @@ label #bars
 	display: none;
 }
 
-.banner-name
-{
-	font-family: title;
-	color: #393185;
-	text-shadow: 1px 0 0 #e85022, -1px 0 0 #e85022, 0 1px 0 #e85022, 0 -1px 0 #e85022, 1px 1px 0 #e85022, 1px -1px 0 #e85022, -1px 1px 0 #e85022, -1px -1px 0 #e85022;
-	font-size: 50px;
-}
 .click
 {
 	transform: rotate(-90deg);
@@ -351,116 +451,56 @@ label #bars
 	}
 }
 
-.t1
+
+.img-strip
 {
-	position: relative;
 	overflow: hidden;
+	width: 100%;
 	height: 200px;
+	position: relative;
 }
 
-.a1
+.image-move
 {
 	position: absolute;
-	width: 100%;
-	animation-name: scrolling;
-	animation-duration: 28s;
-	animation-iteration-count: infinite;
-	visibility: visible;
-	animation-timing-function: linear;
+	height: 200px;
+	width: 25%;
+	overflow: hidden;
+	transition: 1s;
 }
 
-.a2
+.img-client-home
 {
+	width: 50%;
 	position: absolute;
-	width: 100%;
-	animation-name: scrollingtwo;
-	animation-duration: 28s;
-	animation-iteration-count: infinite;
-	visibility: visible;
-	animation-timing-function: linear;
+	margin-left: 25%;
 }
 
-.a3
+@media(max-width: 800px)
 {
-	position: absolute;
-	width: 100%;
-	animation-name: scrollingtwo;
-	animation-duration: 28s;
-	animation-iteration-count: infinite;
-	visibility: visible;
-	animation-timing-function: linear;
-	animation-delay: 7s;
-	left: 100%;
+	.img-client-home
+	{
+		width: 60%;
+		margin-left: 20%;
+	}
 }
 
-.a4
+@media(max-width: 550px)
 {
-	position: absolute;
-	width: 100%;
-	animation-name: scrollingtwo;
-	animation-duration: 28s;
-	animation-iteration-count: infinite;
-	visibility: visible;
-	animation-timing-function: linear;
-	animation-delay: 14s;
-	left: 100%;
+	.img-client-home
+	{
+		width: 70%;
+		margin-left: 15%;
+	}
 }
 
-@keyframes scrolling
+@media(max-width: 400px)
 {
-	0%{left: 0; visibility: visible;}
-	25%{left: -100%; visibility: hidden;}
-	75%{left: 100%; visibility: hidden;}
-	100%{left: 0; visibility: visible;}
-}
-
-@keyframes scrollingtwo
-{
-	0%{left: 100%; visibility: visible;}
-	50%{left: -100%; visibility: hidden;}
-	100%{left: 100%; visibility: hidden;}
-}
-
-.test
-{
-	position: absolute;
-	width: 19%;
-}
-
-.t1 .a1 img:nth-child(1),
-.t1 .a2 img:nth-child(1),
-.t1 .a3 img:nth-child(1),
-.t1 .a4 img:nth-child(1)
-{
-	margin-left: 3%;
-	margin-right: 3%;
-}
-
-.t1 .a1 img:nth-child(2),
-.t1 .a2 img:nth-child(2),
-.t1 .a3 img:nth-child(2),
-.t1 .a4 img:nth-child(2)
-{
-	margin-left: 28%;
-	margin-right: 3%;
-}
-
-.t1 .a1 img:nth-child(3),
-.t1 .a2 img:nth-child(3),
-.t1 .a3 img:nth-child(3),
-.t1 .a4 img:nth-child(3)
-{
-	margin-left: 53%;
-	margin-right: 3%;
-}
-
-.t1 .a1 img:nth-child(4),
-.t1 .a2 img:nth-child(4),
-.t1 .a3 img:nth-child(4),
-.t1 .a4 img:nth-child(4)
-{
-	margin-left: 78%;
-	margin-right: 320
+	.img-client-home
+	{
+		width: 80%;
+		margin-left: 10%;
+	}
 }
 
 .review-btn
@@ -514,14 +554,17 @@ label #bars
 	}
 }
 
-.proud
+.proud-client
 {
-	background: rgba(0,0,0,0.04);
+	color: #090729;
 }
 
-#proud-client
+.home-goals
 {
-	background: rgba(0,0,0,0.04);
+	background: url(../images/snowfall.jpg);
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .home-product
@@ -670,9 +713,20 @@ label #bars
 	}
 }
 
+.proudy
+{
+	background: #e8eafd;
+}
+
+.client-strip
+{
+	background: #fff;
+}
+
 .home-goal
 {
 	font-size: 19px;
+	color: rgba(255,255,255,0.8);
 }
 
 @media(max-width: 1068px)
@@ -864,8 +918,32 @@ label #bars
 	font-size: 16px;
 }
 
-.icon-color
+.aboutus-bg
 {
-	color: #393185;
-	opacity: 0.7;
+	background: #f5dcdc;
+}
+
+.leftist
+{
+	margin-top: 20px;
+	transition: 2s;
+}
+
+.rightist
+{
+	margin-top: 20px;
+	transition: 2s;
+}
+
+.width-changer
+{
+	width: 60%;
+}
+
+@media(max-width: 991px)
+{
+	.width-changer
+	{
+		width: 100%;
+	}
 }
