--- a/css/style.css
+++ b/css/style.css
@@ -1064,3 +1064,119 @@ label #bars
 {
 	display: inline-block;
 }
+
+.contact-pop
+{
+	width: 90%;
+	padding: 0 5% 0 5%;
+	margin-left: 5%;
+	z-index: 399;
+	background: #fff;
+	transition: 0.5s;
+	border-radius: 10px;
+	bottom: -1000px;
+	border: 1px solid;
+}
+
+@media(min-width: 450px)
+{
+	.contact-pop
+	{
+		width: 400px;
+		left: 50%;
+		margin-left: -200px;
+		padding: 0 20px 0 20px;
+	}
+}
+
+@media(min-width: 850px)
+{
+	.contact-pop
+	{
+		width: 500px;
+		left: 50%;
+		margin-left: -250px;
+		padding: 0 20px 0 20px;
+	}
+}
+
+#pop-form
+{
+	font-size: 15px;
+}
+
+.pop-contact-input[placeholder]
+{
+	font-size: 15px;
+}
+
+.pop-contact-input
+{
+	height: 25px;
+	display: inline;
+}
+
+.pop-txt-area
+{
+	resize: none;
+	height: 50px;
+}
+
+
+@media(min-height: 750px)
+{
+	.pop-contact-input
+	{
+		height: auto;
+		display: block;
+	}
+}
+
+@media(min-height: 850px)
+{
+	.pop-txt-area
+	{
+		height: auto;
+		display: block;
+	}
+}
+
+#pop-submit
+{
+	font-size: 15px;
+}
+
+.close-pop
+{
+	font-size: 30px;
+	cursor: pointer;
+	vertical-align: middle;
+}
+
+#thank-pop
+{
+	width: 80%;
+	z-index: 400;
+	display: none;
+}
+
+@media(min-width: 450px)
+{
+	#thank-pop
+	{
+		width: 360px;
+	}
+}
+
+@media(min-width: 850px)
+{
+	#thank-pop
+	{
+		width: 460px;
+	}
+}
+
+.thank-pop-smile
+{
+	font-size: 90px;
+}
