--- a/css/style.css
+++ b/css/style.css
@@ -26,23 +26,19 @@ body
 .banner
 {
 	padding-top: 60px;
-	background: url(../images/sky.jpg);
+	background: linear-gradient(rgba(12,45,70,1),rgba(12,45,70,0.6)), url(../images/sky.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	transition: 2s;
-	border-bottom-right-radius: 10%;
-	border-bottom-left-radius: 10%;
 }
 
 #banner
 {
 	padding-top: 90px;
-	background: url(../images/sky.jpg);
+	background: linear-gradient(rgba(12,45,70,1),rgba(12,45,70,0.6)), url(../images/sky.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	transition: 2s;
-	border-bottom-right-radius: 0%;
-	border-bottom-left-radius: 0%;
 }
 
 nav
