--- a/css/style.css
+++ b/css/style.css
@@ -699,23 +699,15 @@ label #bars
 
 .home-profile-info
 {
-	font-family: title;
-	font-size: 20px;
+	font-family: sans-serif;
+	font-size: 19px;
 }
 
 @media(max-width: 1200px)
 {
 	.home-profile-info
 	{
-		font-size: 18px;
-	}
-}
-
-@media(max-width: 1068px)
-{
-	.home-profile-info
-	{
-		font-size: 15px;
+		font-size: 16px;
 	}
 }
 
@@ -942,7 +934,7 @@ label #bars
 
 .aboutus-bg
 {
-	background: linear-gradient(rgba(245,220,220,0.6),rgba(245,220,220,0.6)), url(../images/table.jpg);
+	background: linear-gradient(rgba(245,220,220,0.65),rgba(245,220,220,0.65)), url(../images/table.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -951,7 +943,7 @@ label #bars
 {
 	.aboutus-bg
 	{
-		background: linear-gradient(rgba(245,220,220,0.6),rgba(245,220,220,0.6)), url(../images/tablemirror.jpg);
+		background: linear-gradient(rgba(245,220,220,0.67),rgba(245,220,220,0.67)), url(../images/tablemirror.jpg);
 		background-size: cover;
 		background-repeat: no-repeat;
 	}
