--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,7 @@ label #bars
 
 .home-goals
 {
-	background: linear-gradient(rgba(0,0,0,0.85),rgba(0,0,0,0.85)), url(../images/recycle.jpg);
+	background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(../images/recycle.jpg);
 	-webkit-background-size: cover;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -1330,4 +1330,18 @@ label #bars
 	{
 		font-size: 13px;
 	}
+}
+
+.contact-us-btn
+{
+	border-radius: 50%;
+	font-size: 11px;
+	padding: 2px 5px;
+}
+
+.contact-us-whatsapp
+{
+	border-radius: 50%;
+	font-size: 14px;
+	padding: 0px 4px;
 }
