--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,7 @@ label #bars
 	.banner-btn
 	{
 		font-size: 16px;
+		width: 30%;
 	}
 }
 
@@ -433,20 +434,12 @@ label #bars
 	.banner-btn
 	{
 		font-size: 12px;
-	}
-}
-
-@media(max-width: 406px)
-{
-	.banner-btn
-	{
-		font-size: 12px;
 		padding-right: 5px;
 		padding-left: 5px;
 	}
 }
 
-@media(max-width: 351px)
+@media(max-width: 383px)
 {
 	.banner-btn
 	{
@@ -456,7 +449,7 @@ label #bars
 	}
 }	
 
-@media(max-width: 335px)
+@media(max-width: 370px)
 {
 	.banner-btn
 	{
@@ -465,6 +458,26 @@ label #bars
 		padding-left: 1px;
 	}
 }	
+
+@media(max-width: 356px)
+{
+	.banner-btn
+	{
+		font-size: 11px;
+		padding-right: 0px;
+		padding-left: 0px;
+	}
+}	
+
+@media(max-width: 329px)
+{
+	.banner-btn
+	{
+		font-size: 10px;
+		padding-right: 0px;
+		padding-left: 0px;
+	}
+}		
 
 #notnav
 {
