--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+/* ---------------------------------------------------------------------
+-------------------------------------
+
+Style Sheet for https://preranaenterprises.in
+
+author: Abhishek Joshi
+phone number: +919757468857 (available on WhatsApp)
+email: abhijoshi2k@gmail.com
+
+------------------------------------------------------------------------
+---------------------------------- */
+
+
 body
 {
 	margin: 0;
