--- a/css/style.css
+++ b/css/style.css
@@ -1460,11 +1460,19 @@ label #bars
 	}
 }
 
+@media(max-width: 472px)
+{
+	.services-icon
+	{
+		font-size: 45px;
+	}
+}
+
 @media(max-width: 391px)
 {
 	.services-icon
 	{
-		font-size: 50px;
+		font-size: 45px;
 	}
 
 	.services-title
@@ -1478,11 +1486,19 @@ label #bars
 	}
 }
 
+@media(max-width: 360px)
+{
+	.services-icon
+	{
+		font-size: 42px;
+	}
+}
+
 @media(max-width: 350px)
 {
 	.services-icon
 	{
-		font-size: 47px;
+		font-size: 40px;
 	}
 
 	.services-title
@@ -1530,12 +1546,25 @@ label #bars
 	}
 }
 
-@media(max-width: 391px)
+@media(max-width: 472px)
 {
 
 	.service-expand+div
 	{
-		max-height: 75px;
+		max-height: 67px;
+	}
+	.service-expand:checked+div
+	{
+		max-height: 1000px;
+	}
+}
+
+@media(max-width: 360px)
+{
+
+	.service-expand+div
+	{
+		max-height: 63px;
 	}
 	.service-expand:checked+div
 	{
@@ -1548,7 +1577,7 @@ label #bars
 
 	.service-expand+div
 	{
-		max-height: 70px;
+		max-height: 60px;
 	}
 	.service-expand:checked+div
 	{
