--- a/css/style.css
+++ b/css/style.css
@@ -1382,9 +1382,10 @@ label #bars
 
 .services-cards
 {
-	border-radius: 10px;
+	border-radius: 5px;
 	border: solid 1px rgba(0,0,0,0.3);
 	width: 100%;
+	box-shadow: 5px 5px 10px rgba(0,0,0,0.1);
 }
 
 .services-quote
@@ -1599,7 +1600,7 @@ label #bars
 .service-try
 {
 	height: 0;
-	border-radius: 10px;
+	border-radius: 5px;
 	transition: 0.5s;
 	z-index: -1;
 	background: #ff3d1c;
