--- a/css/style.css
+++ b/css/style.css
@@ -1644,3 +1644,107 @@ label #bars
 	margin-top: 50px;
 	transition: 0.5s;
 }
+
+.about-pic
+{
+	width: 100%;
+	height: auto;
+	border-radius: 50%;
+}
+
+@media(max-width: 767px)
+{
+	.about-pic-div
+	{
+		margin-left: 130px;
+		margin-right: 130px;
+	}
+}
+
+@media(max-width: 767px)
+{
+	.about-pic-div
+	{
+		margin-left: 90px;
+		margin-right: 90px;
+	}
+}
+
+@media(max-width: 400px)
+{
+	.about-pic-div
+	{
+		margin-left: 20%;
+		margin-right: 20%;
+	}
+}
+
+.achievement-bg
+{
+	background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(../images/triangles_bg.png);
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.scroll
+{
+	font-size: 25px;
+}
+
+.scroll-values
+{
+	font-size: 22px;
+}
+
+.scroll-info
+{
+	font-size: 22px;
+}
+
+@media(max-width: 430px)
+{
+	.scroll-info
+	{
+		font-size: 20px;
+	}
+}
+
+@media(max-width: 397px)
+{
+	.scroll-info
+	{
+		font-size: 18px;
+	}
+}
+
+@media(max-width: 363px)
+{
+	.scroll-values
+	{
+		font-size: 22px;
+	}
+
+	.scroll-info
+	{
+		font-size: 16px;
+	}
+}
+
+@media(max-width: 329px)
+{
+	.scroll
+	{
+		font-size: 22px;
+	}
+
+	.scroll-values
+	{
+		font-size: 19px;
+	}
+	
+	.scroll-info
+	{
+		font-size: 15px;
+	}
+}
